--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ HTML Forms with PyScript
             <option value="gewonnen">Gewonnen</option>
             <option value="verloren">Verloren</option>
 
-        <input pys-onClick="sub" type="submit" id="btn-form" value="submit">
+        <input pys-onClick="sub" type="submit" id="btn-form" value="Berechnen">
 
 
     </form> 
