--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ QTTR Rechner
     
 </title>
 
+<link rel="icon" type="image/x-icon" href="./tticon.png">
+    
 <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
 <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 
