--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div class="container">
         <h1>Welcome to My GitHub.io Page</h1>
         <div class="links">
-            <a href="tt.html">Page 1</a>
-            <a href="calc.html">Page 2</a>
-            <a href="time.html">Page 3</a>
+            <a href="tt.html">TTR-Rechner</a>
+            <a href="calc.html">Rechner</a>
+            <a href="time.html">Uhrzeit</a>
         </div>
     </div>
 </body>
