--- a/calc.html
+++ b/calc.html
@@ -57,7 +57,8 @@
 </head>
 <body>
     <div class="winner hidden">
-        <h1>YOU WIN!</h1>
+        <h1>Good job</h1>
+        <h1>I love you <3</h1>
 
         <button class="reset">Play Again!</button>
     </div>
