--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1>Welcome to My GitHub.io Page</h1>
         <div class="links">
             <a href="tt.html">TTR-Rechner</a>
-            <a href="calc.html">Rechner</a>
+            <a href="game.html">Rechner</a>
             <a href="time.html">Uhrzeit</a>
         </div>
     </div>
